@@ -2,7 +2,7 @@ PACKAGE_NAME=LilyPond
 MAJOR_VERSION=1
 MINOR_VERSION=5
 PATCH_LEVEL=58
-MY_PATCH_LEVEL=uu1
+MY_PATCH_LEVEL=hjj1
 
 # use the above to send patches: MY_PATCH_LEVEL is always empty for a
 # released version.
