@@ -1,3 +1,8 @@
+2002-05-25  Heikki Junes  <heikki.junes@hut.fi>
+
+	* lilypond-mode.el: Write notes with fewer keystrokes trough a 
+	"Quick notes"-interface.
+
 2002-05-26  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* input/regression/non-empty-text.ly: Update example with outdated
